test/1.2/errors/T_ENSHARED.dml
/*
  © 2021-2023 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;

device test;

template a {
    /// ERROR ENSHARED
    data int x;
}

/// WARNING WEXPERIMENTAL
trait b is a {
    /// ERROR ENSHARED
    method m() { x; }
}

data int x;
